--- a/CarouselTest/Base.lproj/Main.storyboard
+++ b/CarouselTest/Base.lproj/Main.storyboard
@@ -23,21 +23,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qqd-2v-A9h">
-                                <rect key="frame" x="16" y="20" width="343" height="117"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="qqd-2v-A9h" secondAttribute="height" multiplier="740:252" id="79m-6c-Yv3"/>
-                                </constraints>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="gJI-SG-Tbf">
+                                <rect key="frame" x="16" y="30" width="343" height="29"/>
+                                <segments>
+                                    <segment title="First"/>
+                                    <segment title="Second"/>
+                                </segments>
+                            </segmentedControl>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FNY-hy-jLq">
+                                <rect key="frame" x="0.0" y="68" width="375" height="599"/>
                                 <connections>
-                                    <segue destination="hUd-UH-of6" kind="embed" id="kug-jc-dOn"/>
+                                    <segue destination="c6I-lo-qTH" kind="embed" id="yng-ZN-TfD"/>
                                 </connections>
                             </containerView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="qqd-2v-A9h" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="58v-Tv-dtR"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="qqd-2v-A9h" secondAttribute="trailing" id="aBG-4Q-AgW"/>
-                            <constraint firstItem="qqd-2v-A9h" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="lWy-hI-wCh"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="gJI-SG-Tbf" secondAttribute="trailing" id="42y-g0-Hku"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="FNY-hy-jLq" secondAttribute="bottom" id="4xh-6p-Fze"/>
+                            <constraint firstItem="FNY-hy-jLq" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="G2g-a0-R5s"/>
+                            <constraint firstAttribute="trailing" secondItem="FNY-hy-jLq" secondAttribute="trailing" id="Kkb-VU-nYi"/>
+                            <constraint firstItem="FNY-hy-jLq" firstAttribute="top" secondItem="gJI-SG-Tbf" secondAttribute="bottom" constant="10" id="MUi-T9-LHt"/>
+                            <constraint firstItem="gJI-SG-Tbf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="NOL-jg-g4U"/>
+                            <constraint firstItem="gJI-SG-Tbf" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="10" id="ZQi-1P-hL4"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -45,13 +53,120 @@
             </objects>
             <point key="canvasLocation" x="37.600000000000001" y="38.23088455772114"/>
         </scene>
-        <!--Carousel Page View Controller-->
+        <!--CarouselPageViewController-->
         <scene sceneID="FDc-ud-hlL">
             <objects>
-                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="hUd-UH-of6" customClass="CarouselPageViewController" customModule="CarouselTest" customModuleProvider="target" sceneMemberID="viewController"/>
+                <pageViewController storyboardIdentifier="CarouselPageViewController" autoresizesArchivedViewToFullSize="NO" title="CarouselPageViewController" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="hUd-UH-of6" customClass="CarouselPageViewController" customModule="CarouselTest" customModuleProvider="target" sceneMemberID="viewController">
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="343" height="117"/>
+                </pageViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IFG-3A-fEj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="924" y="38"/>
+            <point key="canvasLocation" x="881" y="-501"/>
+        </scene>
+        <!--Shop Collection View Controller-->
+        <scene sceneID="aE9-6m-eZ3">
+            <objects>
+                <collectionViewController id="c6I-lo-qTH" customClass="ShopCollectionViewController" customModule="CarouselTest" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" id="2zr-3a-MFl">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="599"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="1pm-zK-nMq">
+                            <size key="itemSize" width="150" height="150"/>
+                            <size key="headerReferenceSize" width="50" height="117"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="20" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ShopItemCollectionViewCell" id="BTi-gH-nfj" customClass="ShopItemCollectionViewCell" customModule="CarouselTest" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="137" width="150" height="150"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EKv-nO-Fhd">
+                                            <rect key="frame" x="25" y="8" width="100" height="100"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="EKv-nO-Fhd" secondAttribute="height" multiplier="1:1" id="6oe-Ty-Lhm"/>
+                                                <constraint firstAttribute="width" constant="100" id="Dez-jK-sj4"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="krs-za-jb8">
+                                            <rect key="frame" x="13" y="98" width="124" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BK6-ng-YOb">
+                                            <rect key="frame" x="13" y="119" width="124" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="krs-za-jb8" firstAttribute="leading" secondItem="BK6-ng-YOb" secondAttribute="leading" id="6Sk-UP-hGb"/>
+                                    <constraint firstItem="BK6-ng-YOb" firstAttribute="centerX" secondItem="BTi-gH-nfj" secondAttribute="centerX" id="G6W-LQ-gcM"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="BK6-ng-YOb" secondAttribute="trailing" constant="5" id="RtW-fP-m5x"/>
+                                    <constraint firstItem="krs-za-jb8" firstAttribute="trailing" secondItem="BK6-ng-YOb" secondAttribute="trailing" id="Tem-jk-RfH"/>
+                                    <constraint firstItem="BK6-ng-YOb" firstAttribute="leading" secondItem="BTi-gH-nfj" secondAttribute="leadingMargin" constant="5" id="Z6z-gd-IKW"/>
+                                    <constraint firstItem="EKv-nO-Fhd" firstAttribute="top" secondItem="BTi-gH-nfj" secondAttribute="topMargin" id="bq7-aa-1Rz"/>
+                                    <constraint firstItem="krs-za-jb8" firstAttribute="centerX" secondItem="BK6-ng-YOb" secondAttribute="centerX" id="fMR-9w-78L"/>
+                                    <constraint firstItem="BK6-ng-YOb" firstAttribute="top" secondItem="krs-za-jb8" secondAttribute="bottom" id="g4I-cK-vDe"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="BK6-ng-YOb" secondAttribute="bottom" constant="2" id="pG1-c1-twx"/>
+                                    <constraint firstItem="EKv-nO-Fhd" firstAttribute="centerX" secondItem="BTi-gH-nfj" secondAttribute="centerX" id="vK5-Mz-1QA"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="albumImageView" destination="EKv-nO-Fhd" id="xWY-gh-3hX"/>
+                                    <outlet property="albumNameLabel" destination="krs-za-jb8" id="fOY-Aw-rsP"/>
+                                    <outlet property="artistNameLabel" destination="BK6-ng-YOb" id="ZSP-Wj-gKX"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CarouselViewContainer" id="Ycq-z0-BBl" customClass="CarouselHeaderViewContainer" customModule="CarouselTest" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="117"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                        </collectionReusableView>
+                        <connections>
+                            <outlet property="dataSource" destination="c6I-lo-qTH" id="vLN-pz-wnW"/>
+                            <outlet property="delegate" destination="c6I-lo-qTH" id="kCd-0y-1JS"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="peQ-TP-TY4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-238" y="833"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="LYs-qe-eIl">
+            <objects>
+                <tableViewController id="wmz-8k-A6f" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="PVy-i9-BrE">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="94b-fy-zvM">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="94b-fy-zvM" id="g66-Em-rcI">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="wmz-8k-A6f" id="JMC-57-MbE"/>
+                            <outlet property="delegate" destination="wmz-8k-A6f" id="rdN-rL-GVT"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9hL-Cf-Mmg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="599" y="747"/>
         </scene>
         <!--Carousel Image View Controller-->
         <scene sceneID="zu1-P0-NFU">
@@ -88,7 +203,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3Q1-rq-Lrh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1673" y="44"/>
+            <point key="canvasLocation" x="1644" y="-501"/>
         </scene>
     </scenes>
 </document>
